[FIX] color scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.scroll-modificado::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+.scroll-modificado::-webkit-scrollbar-thumb {
+  height: 50%;
+  background: #4e46e5;
+  border-radius: 4px;
+}
